<resources>
    <string name="app_name">appMonitoramento</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="atualizar">Atualizar</string>
    <string name="ID_Botijão">ID_botijao</string>
    <string name="valor_gas">valor_gas</string>
    <string name="data">data</string>
    <string name="channel_name">myChannel</string>
    <string name="Lugar">Lugar</string>
    <string name="tag">tag</string>
    <string name="peso">peso</string>
    <string name="Tara">tara</string>
    <string name="Enviar">Enviar</string>
    <string name="porcentagem">porcentagem</string>
    <string name="channel_description">MyDescription</string>
    <string name="Monitoramento">Monitoramento</string>
</resources>
