<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Monitoramento"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#8BC34A"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="125dp"
            android:layout_height="57dp"
            android:fontFamily="monospace"
            android:text="@string/peso"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textViewpes"
            android:layout_width="125dp"
            android:layout_height="57dp"
            android:fontFamily="monospace"
            android:text="@string/porcentagem"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textViewPorcentagem__t"
            android:layout_width="112dp"
            android:layout_height="57dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textViewpes"
            app:layout_constraintTop_toBottomOf="@+id/textViewData__t" />

        <TextView
            android:id="@+id/textViewValor__t"
            android:layout_width="116dp"
            android:layout_height="56dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="@string/data"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textViewData__t"
            android:layout_width="116dp"
            android:layout_height="51dp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textViewValor__t" />

</androidx.constraintlayout.widget.ConstraintLayout>